test/typecheck/errors/intersect.boa
o: output sum of int;
o << 1;

visit(input, visitor {
    before n: WhileStatement, ForStatement ->
        if (def(n.initializations))
            o << 1;
});
